# microservices_finale_lab

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  sqlc.yaml
backend/: Dockerfile  main.py  yoyo.ini
backend/db/: models.py  postgres.py  ws_requests.py
config/centrifugo/: config.json  config.json.backup
config/nginx/: default.conf.template
db/: ws_requests.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: connect.js
migrations/: 000001_init_database.down.sql  000001_init_database.up.sql
proto/: main_pb2.py  main_pb2.pyi  main_pb2_grpc.py
queries/: ws-requests.sql
